Fixed fetch inside flexboxes to align and look nice.

--- a/_section.scss
+++ b/_section.scss
@@ -7,11 +7,28 @@ section {
     border-radius: 1px solid black;
 
     .item {
-      width: 23%;
-      padding-bottom: 32%;
-      margin-bottom: 2%;
+      width: 24%;
       position: relative;
       border: 5px solid black;
+      margin-bottom: 2rem;
+
+      img {
+        max-width: 100%;
+        height: auto;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+      }
+      h1 {
+        text-align: center;
+        font-size: 28px;
+      }
+
+      p {
+        text-align: center;
+        font-size: 18px;
+      }
     }
   }
 }
